--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts-ts": "^2.13.0"
+    "react-redux": "5.0.7",
+    "react-scripts-ts": "^2.13.0",
+    "redux": "3.7.2"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -19,6 +21,7 @@
     "@types/node": "^9.4.6",
     "@types/react": "16.0.38",
     "@types/react-dom": "16.0.4",
+    "@types/react-redux": "5.0.15",
     "typescript": "^2.7.2"
   },
   "keywords": [],
