--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-qr-reader": "^2.1.0",
     "react-redux": "5.0.7",
+    "react-router-dom": "^4.2.2",
     "react-scripts-ts": "^2.13.0",
     "redux": "3.7.2"
   },
@@ -22,6 +24,7 @@
     "@types/react": "16.0.38",
     "@types/react-dom": "16.0.4",
     "@types/react-redux": "5.0.15",
+    "@types/react-router-dom": "^4.2.4",
     "typescript": "^2.7.2"
   },
   "keywords": [],
