add material-ui UI framework

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "homepage": "https://qdlee.github.io/qr-reader-web",
   "dependencies": {
     "gh-pages": "^1.1.0",
+    "material-ui": "^1.0.0-beta.38",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-qr-reader": "^2.1.0",
@@ -21,7 +22,6 @@
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject"
-    
   },
   "devDependencies": {
     "@types/enzyme": "^3.1.9",
